mat383/assets/style.css
/* ... */
a{
	color:rgb(0, 180, 0);
	text-underline-offset:3px;
	text-decoration-line:none;
}
h1, h2, h3, h4, h5, h6{
	line-height:normal;
	color:white;
}
a:hover:not(.postpreviewlink){	
	text-decoration-line:underline;
}




/*--- Static particle background ---*/
div.balls-bg{
	width:100%;
	height:100%;
	position:fixed;
	z-index:-100;
	background-color:#000000;
	@supports (filter:blur()){ 
		background-image:url("images/circles-bg.png") !important;
	}
    background-repeat:repeat;
	background-size:50vw;
	filter:blur(6vw) brightness(125%) !important;
}







/*--- Animated particle background ---*/
.particle-container .particle{
    position:fixed;
	width:10%;
	aspect-ratio:1;
    border-radius:50%;
	background-image:url("images/particle2.png");
	background-repeat:no-repeat;
	background-size:cover;
	image-rendering:auto;
	z-index:-2;
	opacity:0.2;
}
.particle-container .particle:nth-child(1){
	translate:20vw 100vh;
	scale:0.5;
    animation:particle-motion2 14s linear -5s infinite, particle-fade1 8s linear -4s infinite;
}
.particle-container .particle:nth-child(2){
	translate:15vw 100vh;
	scale:1;
    animation:particle-motion1 11.5s linear -1s infinite, particle-fade1 10.2s linear -1s infinite;
}
.particle-container .particle:nth-child(3){
	translate:-10vw 100vh;
	scale:1;
    animation:particle-motion1 9.5s linear -1s infinite, particle-fade1 12s linear -7s infinite;
}
.particle-container .particle:nth-child(4){
	translate:60vw 100vh;
	scale:1;
    animation:particle-motion1 12.5s linear 1s infinite, particle-fade1 9s linear 0s infinite;
}
.particle-container .particle:nth-child(5){
    translate:70vw 100vh;
	scale:0.5;
    animation:particle-motion2 16.5s linear -3s infinite, particle-fade1 11s linear -3s infinite;
}
.particle-container .particle:nth-child(6){
    translate:20vw 100vh;
	scale:3;
	filter:brightness(1.5);
    animation:particle-motion3 20s linear -3s infinite, particle-fade2 12s linear -4s infinite;
}
.particle-container .particle:nth-child(7){
    translate:-20vw 100vh;
	scale:3;
	filter:brightness(1.5);
    animation:particle-motion3 15s linear -6s infinite, particle-fade2 17s linear 0s infinite;
}
.particle-container .particle:nth-child(8){
    translate:60vw 100vh;
	scale:3;
	filter:brightness(1.5);
    animation:particle-motion3 14s linear -8s infinite, particle-fade2 19s linear -2s infinite;
}
@keyframes particle-fade1{0%{opacity:0.2;}60%{opacity:0.2;}65%{opacity:0;}95%{opacity:0;}100%{opacity:0.2;}}
@keyframes particle-fade2{0%{opacity:0.125;}60%{opacity:0.125;}70%{opacity:0;}90%{opacity:0;}100%{opacity:0.125;}}
@keyframes particle-motion1{from{transform:translate(0,50vh);}to{transform:translate(20vw, -175vh);}}
@keyframes particle-motion2{from{transform:translate(0, 100vh);}to{transform:translate(80vw, -300vh);}}
@keyframes particle-motion3{from{transform:translate(0,25vh);}to{transform:translate(20vw, -75vh);}}
/* Make the background scale with the screen on lower resolutions */
@media (max-width:3000px){
	div.balls-bg{
		background-size:65%;
		filter:blur(6em) brightness(125%) !important;
	}
}
@media (max-width:2000px){
	div.balls-bg{
		background-size:100em;
		filter:blur(6em) brightness(125%) !important;
	}
	.particle-container .particle{
		width:10em;
	}
}











/*--- Headerbar stuff ---*/
.navbar{
	background-color:#00000036;
	padding-top:2px;
	position:relative;
	z-index:1000;
	margin-bottom:80px;
	height: 60px;
}
.navbarcontent{
	max-width:900px;
	margin:auto;
	display:flex;
	justify-content:space-between;
	align-items:center;
	padding:0 10px 10px 10px;
	height: 100%;
}
.navbarcontent a:hover{
	color:rgb(240, 240, 240) !important;
	border-color:#ccc !important;
	text-decoration-line:none;
}
.otherlinks{
	display:flex;
	gap:20px;
	order:2;
}
a.activepage{
	color:rgb(0, 180, 0) !important;
	border-color:rgb(0, 180, 0) !important;
	border-width:0 0 2px 0;
	text-decoration-line:none;
}
.otherlinks a{
	border-color:rgb(240, 240, 240);
	border-width:0 0 2px 0;
	background-image:none;
	text-decoration-line:none;
}
.otherlinks a:not(.activepage):not(:hover){
	border-color:transparent !important;
	border-width:0 0 2px 0;
	background-image:none;
	text-decoration-line:none;
	transition:0.4s;
}
.activepage:not(:hover){
	border-color:rgb(0, 180, 0);
	@supports (background-image:linear-gradient(to top, rgba(0, 180, 0, 0.2), transparent)){ 
		background-color:transparent;
		background-image:linear-gradient(to top, rgba(0, 180, 0, 0.2), transparent);
	}
	transition:0.4s;
}
.homelink{
	order:1;
	font-size:150%;
	font-weight:bold;
	color:rgb(0, 180, 0);
	transition:color 0.4s;
	height:80%;
	border:none !important;
	transition: 0.5s translate;
}
.homelink svg {
	width: 100%;
	height: 100%;
}
.navbarm {
	fill:transparent;
	stroke:#ccc;
	stroke-opacity:1;
    stroke-width:40px;
	stroke-linecap:round;
	stroke-linejoin:round;
	paint-order:fill stroke;
	transition: 0.5s fill, 0.5s stroke;
}
.homelink:hover {
	.navbarm {
		transition: 0.1s;
		fill:green;
		stroke:white;
	}
	translate:3px 0;
	transition: 0.05s translate;
}












/*--- Tags ---*/
.tagcloud{
	margin-top:16px;
	font-size:14px;
}
.tagcloud ul{
	list-style:none;
	padding:0px;
	display:inline;
}
.tagcloud li{
	display:inline-block;
	margin:0;
}
.tag, .tagcloud li{
	background:rgba(0, 180, 0, 0.2);
	margin:0;
	border-radius:3px;
	padding:1px 6px 1px 6px;
}

.posttags{
	text-align:center;
	margin:30px auto 30px auto;
	width:fit-content;
	opacity:0.4;
	p{margin:0;}
	filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
}
.posttags{
	opacity:1;
	a{
		color:rgb(0, 180, 0);
		background:rgba(0, 180, 0, 0.2);
	}
}
.posttags:not(:hover){
	opacity:0.5;
	transition:0.4s;
	transition-property:background, color, opacity;
	a{
		background:rgba(90, 90, 90, 0.3) !important;
		color:#ccc !important;
		opacity:0.75;
	}
}
/* different coloured post tags */
.tagoutside{
	color:rgb(98, 217, 255) !important;
	background-color:rgba(0, 100, 255, 0.4) !important;
	a{color:rgb(98, 217, 255);}
}
/* ... */

